# surfe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  License.txt  README.md  appveyor.yml  setup.py
.github/workflows/: ccpp.yml
.scannerwork/: report-task.txt
data/: OverturnNormals.vtp  Overturn_FieldData.vtp  anisotropy_test_interface.csv  anisotropy_test_planar.csv  conic_ie10.vtp  conic_itr10.vtp  conic_normal10.vtp  contact_data.csv  disconnection_interface.csv  disconnection_normal.csv  inequality_25.vtp  normal_25.vtp  oncontact_25.vtp  planar_data.csv  refolded_isoclinal_interface.vtp  refolded_isoclinal_normals.vtp  strat_inequality25.vtp  strat_interface25.vtp  strat_normal25.vtp
docs/: Inputs and Outputs.docx  InputsAndOutputs.md
geo_builder/: geo_builder.cpp  geo_builder.h  geo_builder_module.h  read_input_files.cpp  read_input_files.h
geo_builder/ui/: inputImpl.cpp
gmp_lib/: gmp.h  gmpxx.h
gmp_lib/Debug/lib/: libgmp-3.lib  libgmpxx-3.lib
gmp_lib/Release/lib/: libgmp-3.lib  libgmpxx-3.lib
math_lib/: math_lib_module.h  math_methods.cpp  math_methods.h
mpir_lib/: mpir.h
mpir_lib/Debug/: mpir.lib  mpirxx.lib
mpir_lib/Release/: mpir.lib  mpirxx.lib
python/: model_input.cpp
surfe_lib/: anisotropy_input.cpp  anisotropy_input.h  basis.cpp  basis.h  continuous_property.cpp  continuous_property.h  csv.h  debug.cpp  debug.h  export_to_vtk.cpp  export_to_vtk.h  grbf_exceptions.h  input.ui  lajaunie.cpp  lajaunie.h  matrix_solver.cpp  matrix_solver.h  modeling_methods.cpp  modeling_methods.h  modelling_input.cpp  modelling_input.h  modelling_methods_builder.cpp  modelling_methods_builder.h  modelling_parameters.h  read_csv_files.cpp  read_csv_files.h  read_input_files.cpp  read_input_files.h  single_surface.cpp  single_surface.h  stratigraphic_surfaces.cpp  stratigraphic_surfaces.h  surfe_api.cpp  surfe_api.h  surfe_lib_module.h  vector_field.cpp  vector_field.h
surfe_lib/ui/: input.ui  inputImpl.cpp  inputImpl.h  resources.qrc
surfe_pybindings/: pybindings.cpp
test/: main.cpp  test.cpp  test.h
